fix: openapi path
